update zh_cn.yml & zh_tw.yml

--- a/src/main/resources/lang/zh_tw.yml
+++ b/src/main/resources/lang/zh_tw.yml
@@ -77,31 +77,31 @@ command:
 
 # 設定項名稱
 settings:
-  edge_material: "<gold>edge_material: <white>%s"
-  point1_material: "<gold>point1_material: <white>%s"
-  point2_material: "<gold>point2_material: <white>%s"
-  grid_material: "<gold>grid_material: <white>%s"
-  edge_thickness: "<gold>edge_thickness: <white>%.2f"
-  grid_thickness: "<gold>grid_thickness: <white>%.2f"
-  vertex_marker_size: "<gold>vertex_marker_size: <white>%.2f"
-  height_grid_division: "<gold>height_grid_division: <white>%d"
-  circle_material: "<gold>circle_material: <white>%s"
-  center_material: "<gold>center_material: <white>%s"
-  center_line_material: "<gold>center_line_material: <white>%s"
-  circle_thickness: "<gold>circle_thickness: <white>%.2f"
-  center_line_thickness: "<gold>center_line_thickness: <white>%.2f"
-  center_thickness: "<gold>center_thickness: <white>%.2f"
-  min_circle_segments: "<gold>min_circle_segments: <white>%d"
-  max_circle_segments: "<gold>max_circle_segments: <white>%d"
-  target_segment_length: "<gold>target_segment_length: <white>%.2f"
-  radius_grid_division: "<gold>radius_grid_division: <white>%d"
-  line_material: "<gold>line_material: <white>%s"
-  center_marker_size: "<gold>center_marker_size: <white>%.2f"
-  min_segments: "<gold>min_segments: <white>%d"
-  max_segments: "<gold>max_segments: <white>%d"
-  vertex_material: "<gold>vertex_material: <white>%s"
-  vertical_material: "<gold>vertical_material: <white>%s"
-  vertical_thickness: "<gold>vertical_thickness: <white>%.2f"
-  vertex0_material: "<gold>vertex0_material: <white>%s"
-  vertex_size: "<gold>vertex_size: <white>%.2f"
-  vertex_thickness: "<gold>vertex_thickness: <white>%.2f"
+  edge_material: "<gold>邊緣材質: <white>%s"
+  point1_material: "<gold>點1材質: <white>%s"
+  point2_material: "<gold>點2材質: <white>%s"
+  grid_material: "<gold>網格材質: <white>%s"
+  edge_thickness: "<gold>邊緣厚度: <white>%.2f"
+  grid_thickness: "<gold>網格厚度: <white>%.2f"
+  vertex_marker_size: "<gold>頂點標記大小: <white>%.2f"
+  height_grid_division: "<gold>高度網格分割: <white>%d"
+  circle_material: "<gold>圓形材質: <white>%s"
+  center_material: "<gold>中心材質: <white>%s"
+  center_line_material: "<gold>中心線材質: <white>%s"
+  circle_thickness: "<gold>圓形厚度: <white>%.2f"
+  center_line_thickness: "<gold>中心線厚度: <white>%.2f"
+  center_thickness: "<gold>中心厚度: <white>%.2f"
+  min_circle_segments: "<gold>最小圓形分段: <white>%d"
+  max_circle_segments: "<gold>最大圓形分段: <white>%d"
+  target_segment_length: "<gold>目標分段長度: <white>%.2f"
+  radius_grid_division: "<gold>半徑網格分割: <white>%d"
+  line_material: "<gold>線條材質: <white>%s"
+  center_marker_size: "<gold>中心標記大小: <white>%.2f"
+  min_segments: "<gold>最小分段: <white>%d"
+  max_segments: "<gold>最大分段: <white>%d"
+  vertex_material: "<gold>頂點材質: <white>%s"
+  vertical_material: "<gold>垂直材質: <white>%s"
+  vertical_thickness: "<gold>垂直厚度: <white>%.2f"
+  vertex0_material: "<gold>頂點0材質: <white>%s"
+  vertex_size: "<gold>頂點大小: <white>%.2f"
+  vertex_thickness: "<gold>頂點厚度: <white>%.2f"
